--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
     <header id="header"></header>
     <section id="welcome" class="container">
       <div id="title-box">
-        <h1 class="title">Dance Type Test</h1>
+        <h1 class="title">DANCE MBTI</h1>
         <h3 class="sec-tit">나에게 어울리는 춤은?</h3>
       </div>
       <hr class="w-line">
       <p class="w-line">
-        <span id="p-tit">이 테스트로 당신은...</span><br>
-        당신에게 어울리는 춤을 찾을 수 있습니다!
+        <span id="p-tit">내 성격과 어울리는 춤은 무엇일까?</span><br>
+        4월 29일, 세계 춤의 날을 맞이하여 나에게 어울리는 춤을 찾아보아요!
       </p>
       <hr class="w-line">
       <div class="start-wrap">
-        <button class="start">시 작</button>
+        <button class="start">Shall we dance?</button>
       </div>
     </section>
     <section id="qna" class="container">
