[HTML] fix logo path

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="나에게 어울리는 춤">
   <meta property="og:description" content="나에게 어울리는 춤은 무엇일까?">
-  <meta property="og:image" content="img/og-logo.png">
+  <meta property="og:image" content="img/og-logo.jpg">
   <meta property="og:url" content="https://429project.github.io/dance-type-test/">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
