[HTML] fix favicon, make refreash

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <link rel="shortcut icon" type="text/css" href="img/favicon.png">
-  <link rel="appel-touch-icon-precomposed" href="img/favicon.png">
+  <link rel="shortcut icon" type="text/css" href="img/favicon-new.png">
+  <link rel="appel-touch-icon-precomposed" href="img/favicon-new.png">
   <title>
     나에게 어울리는 춤은?
   </title>
@@ -83,6 +83,8 @@
         <div class="res desc"></div>
       </div>
       <button onclick=javascript:copy() class="btn">링크 복사하기</button>
+      <br>
+      <button onclick=javascript:window.location.reload(true) class="btn">다시하기</button>
 
       <hr>
       <div class="caution">
