[CSS]modify textsize

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
     <section id="calc">
       <div class="calc-bar">
-        CALCULATING
+        분석중입니다.
         <div class="calc"></div>
       </div>
       <p class="wait">잠시 기다려주세요...</p>
